--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,24 +31,18 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-  logo: template_assets/webexLogo91.png
-  favicon: template_assets/webex75.png
+  logo: template_assets/cisco_logo.png
+  favicon: template_assets/cisco_logo.png
 extra:
   generator: false
-  repo: "https://github.com/WebexCC-SA/LAB-2308.git"
-  site_event: test
 extra_css:
   - stylesheets/extra.css
-extra_javascript:
-  - template_assets/js/newLoad.js
-  - template_assets/js/setInfo.js
 plugins:
   - search
-  - macros
-  # - with-pdf:
-  #     cover_title: LABXXX-1234
-  #     cover_subtitle: My famous WebexOne Lab
-  #     cover_logo: template_assets/Wx1_25_PDF_image.jpg
+  - with-pdf:
+      cover_title: "LABCOL-2010"
+      cover_subtitle: "Streamline Contact Center Operations with Webex Contact Center and the New Salesforce CRM Connector"
+      cover_logo: template_assets/CL25_Cisco_Live_RGB_Midnight_General_Lockup_Horizontal.png
   - glightbox:
       touchNavigation: true
       loop: false
@@ -76,9 +70,6 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.highlight
-  - pymdownx.tabbed:
-      alternate_style: true
-      
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -88,16 +79,12 @@ nav:
   - Home: index.md
   - Lab:
       - Overview: overview.md
-      - Lab 1 - Getting Started: lab1_getting_started.md
-      - Conclusion: conclusion.md
-  - Topologies: topologies.md
-  - How to use this guide:
-      - Setting up and using the tool:
-        - Initial Setup: howToUse/initialSetup.md
-        - Using the tool after the initial setup: howToUse/postInitial.md
-        - Publishing your changes: howToUse/syncChanges.md
-      - Styling and Advanced Features:
-        - Markdown and Other References: howToUse/references.md
+      - Task 1 - Integrate Webex Contact Center with Saleforce Using the New CRM Connector: task1.md
+      - Task 2 - Presence Synchronization Between Salesforce and Webex Contact Center: task2.md
+      - Task 3 - Data Lookup Using CAD Variables: task3.md
+      - Task 4 - Case Lookup Using Custom CAD Variables and Agent Desktop Screen Pop: task4.md
+      - Task 5 - Automatic New Case Creation Using Custom CAD Variables: task5.md
+      - Related Sessions at Cisco Live: conclusion.md
         - Custom Features: howToUse/customFeatures.md
         - Custom Admonitions: howToUse/admonition.md
  
