--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,8 @@ nav:
   - Lab:
       - Overview: overview.md
       - Task 1 - Integrate Webex Contact Center with Saleforce Using the New CRM Connector: task1.md
-      - Task 2 - Presence Synchronization Between Salesforce and Webex Contact Center: task2.md
-      - Task 3 - Data Lookup Using CAD Variables: task3.md
-      - Task 4 - Case Lookup Using Custom CAD Variables and Agent Desktop Screen Pop: task4.md
-      - Task 5 - Automatic New Case Creation Using Custom CAD Variables: task5.md
+      - Task 2 - Integrate Saleforce Connector with WebRTC: task2.md
+      - Task 3 - Presence Synchronization Between Salesforce and Webex Contact Center: task3.md
+      - Task 4 - Data Lookup Using CAD Variables: task4.md
+      - Task 5 - Case Lookup Using Custom CAD Variables and Agent Desktop Screen Pop: task5.md
+      - Task 6 - Automatic New Case Creation Using Custom CAD Variables: task6.md
