--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 ---
 site_name: "LAB-2308: Building Webex Contact Center connectors: From planning and configuration to avoiding pitfalls" # This must begin with the session ID, e.g. LABXXX-1234 This is my Cisco Live Lab
 site_description: "Building Webex Contact Center connectors: From planning and configuration to avoiding pitfalls" # must be same as "site_name"
-site_author: Anuj Bhatia
+site_author: Anuj Bhatia, D.K Singh, Bhushan Suresh
 copyright: Copyright &copy; 2025 Cisco
 theme:
   name: material
@@ -40,8 +40,8 @@ extra_css:
 plugins:
   - search
   - with-pdf:
-      cover_title: "LABCOL-2010"
-      cover_subtitle: "Streamline Contact Center Operations with Webex Contact Center and the New Salesforce CRM Connector"
+      cover_title: "LAB-2308"
+      cover_subtitle: "Building Webex Contact Center connectors: From planning and configuration to avoiding pitfalls"
       cover_logo: template_assets/CL25_Cisco_Live_RGB_Midnight_General_Lockup_Horizontal.png
   - glightbox:
       touchNavigation: true
